syntax = "proto3";
 
package shop;
 
service ShoeShop{

  //Unary Rpc
  rpc GetPrice(ProductRequest) returns (ProductResponse);
  rpc EmptyCart(CartRequest) returns (CartResponse);

  //Server Rpc
  rpc ListShoes(Empty) returns (stream ProductResponse);
  rpc GetCartContents(CartRequest) returns (stream ProductResponse);
  rpc AddToCart(UpdateCartRequest) returns (stream ProductResponse);
  rpc RemoveFromCart(UpdateCartRequest) returns (stream ProductResponse);
  rpc Discount(DiscountRequest) returns (stream ProductResponse);

  //Client rpc
  rpc Purchase(stream PurchaseRequest) returns (PurchaseResponse);
  
  //Bidirectional
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}
 
message CartRequest {
  string userId = 1;
}

message CartResponse {
  string message = 1;
}
 
message ProductRequest{
  string brand = 1;
}

message UpdateCartRequest{
  string id = 1;
  string userId = 2;
}
 
message ProductResponse{
  string id = 1;
  string brand = 2;
  uint32 price = 3;
  string description = 4;
  string image = 5;
}

message PurchaseRequest {
  string id = 1;
  string brand = 2;
  uint32 price = 3;
  string description = 4;
}

message PurchaseResponse {
  string message = 1;
}
 
message Empty{}
 
message ShoppingCartRequest {
  string brand = 1;
  string color = 2;
  string size = 3;
  uint32 quantity = 4;
}
 
message ShoppingCartResponse {
  string message = 1;
}
 
message ChatMessage{
  string user = 1;
  string message = 2;
}

message DiscountRequest {
  string code = 1;
  string userId = 2;
}

message DiscountResponse {
  string message = 1;
}